category cards and title sass

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,8 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/category-card";
 
 @import "layout/header";
 @import "layout/footer";
+@import "layout/title";
