--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -13,3 +13,11 @@
 // $paragraph-font-size: 1rem; // 18px
 // $small-font-size: .89rem; // 16px
 // $default-line-height: 1.44rem; // 26px
+
+// Font
+$default-font-family:'Noto IKEA', 'Noto Sans', 'Roboto', 'Open Sans', system-ui, sans-serif ;
+$title-font-size:1.5rem;
+$small-text-size:0.875rem;
+
+// colors
+$small-text-color:#484848;
