--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,8 @@
 
 @import "components/button";
 @import "components/category-card";
+@import "components/row-card";
+
 
 @import "layout/header";
 @import "layout/footer";
