--- a/assets/scss/layout/_title.scss
+++ b/assets/scss/layout/_title.scss
@@ -1,4 +1,10 @@
 .head-title{
-    margin: 1.875rem 0.3rem;
-    font-family: $default-font-family;
+    margin: 1.875rem 0rem 0.3rem 0.3rem;
+    font-size: $title-font-size;
+}
+.small-text{
+    font-size: $small-text-size;
+    color:$small-text-color;
+    margin: 0.5rem 0.3rem;
+    width: 70%;
 }
