--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,9 +5,7 @@
 @import "base/utilities";
 
 @import "components/button";
-@import "components/category-card";
-@import "components/row-card";
-
+@import "components/card";
 
 @import "layout/header";
 @import "layout/footer";
