add buying steps cards

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -20,4 +20,6 @@ $title-font-size:1.5rem;
 $small-text-size:0.875rem;
 
 // colors
+$default-text-color:black;
 $small-text-color:#484848;
+$secondary-color:#F5F5F5;
