--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,30 +11,61 @@
   padding-left: 0px;
 }
 
-.row-card {
+.row-card-holder .row-card {
   font-family: "Noto IKEA", "Noto Sans", "Roboto", "Open Sans", system-ui, sans-serif;
   font-size: 1.5rem;
   display: flex;
   flex-direction: row;
-  background-color: burlywood;
-  width: 100%;
 }
-.row-card img {
-  width: 70%;
-}
-.row-card .card-right {
+.row-card-holder .row-card .card-right {
   padding: 20px;
+  background-color: burlywood;
+  display: flex;
+  flex-direction: column;
+}
+.row-card-holder .row-card .card-right .card-btn {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border: none;
+  width: 60px;
+  height: 60px;
+  margin-top: auto;
+}
+
+.step-card {
+  color: #484848;
+  border: none;
+}
+.step-card .step-body {
+  text-align: center;
+  background-color: #F5F5F5;
+}
+.step-card .step-body svg {
+  fill: #484848;
+  width: 1.875rem;
+  height: 1.875rem;
+}
+.step-card .step-body .step-title {
+  color: black;
+}
+.step-card .step-body .step-link {
+  text-decoration-color: #484848;
+  -moz-text-decoration-color: #484848;
+  color: #484848;
 }
 
 .head-title {
-  margin: 1.875rem 0rem 0.3rem 0.3rem;
+  margin: 1.875rem 0rem 1.875rem 0.3rem;
   font-size: 1.5rem;
 }
 
 .small-text {
   font-size: 0.875rem;
   color: #484848;
-  margin: 0.5rem 0.3rem;
+  margin: -1.875rem 0.3rem 1.875rem;
   width: 70%;
 }
 
