--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -1,27 +1,69 @@
-.category-card{
+.category-card {
     border: none;
     text-decoration: none;
-    color: black;
-    &:hover{
+    color: $default-text-color;
+
+    &:hover {
         text-decoration: underline;
-        color: black;
+        color: $default-text-color;
     }
-    .category-body{
+
+    .category-body {
         padding-left: 0px;
     }
 }
 
-.row-card{
-    font-family: $default-font-family;
-    font-size: $title-font-size;
-    display:flex;
-    flex-direction:row;
-    background-color: burlywood;
-    width: 100%;
-    img{
-        width: 70%;
+.row-card-holder {
+    // height: 90vh;
+
+    .row-card {
+        font-family: $default-font-family;
+        font-size: $title-font-size;
+        display: flex;
+        flex-direction: row;
+        // height: 100%;
+
+        .card-right {
+            padding: 20px;
+            background-color: burlywood;
+            display: flex;
+            flex-direction: column;
+
+            .card-btn {
+                border-radius: 50%;
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                -ms-border-radius: 50%;
+                -o-border-radius: 50%;
+                border: none;
+                width: 60px;
+                height: 60px;
+                margin-top: auto;
+            }
+        }
     }
-    .card-right{
-        padding: 20px;
+}
+
+.step-card {
+    color: $small-text-color;
+    border: none;
+    .step-body {
+        text-align: center;
+        background-color: $secondary-color;
+        svg {
+            fill: $small-text-color;
+            width: 1.875rem;
+            height: 1.875rem;
+        }
+
+        .step-title {
+            color: $default-text-color;
+        }
+
+        .step-link {
+            text-decoration-color: $small-text-color;
+            -moz-text-decoration-color: $small-text-color;
+            color: $small-text-color;
+        }
     }
 }
