--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,3 +8,8 @@
 
 @import "layout/header";
 @import "layout/footer";
+// login
+@import "pages/login";
+@import "pages/favourite";
+@import "pages/shoppingBag";
+@import "components/allMixin";
