--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,28 +1,5 @@
-// Colors
-$color-primary: #4D96A9;
-$color-primary-variant: #8FE3F9;
-$color-secondary: #855FB1;
-$color-secondary-variant: #D9B8FF;
-$dark-color: #28283D;
-$light-color: #FAFAFA;
-$grey-color: #87879D;
-
 // Font
-// main
-$heading-1-font-size: 3.56rem; // 64px
-$heading-2-font-size: 2.22rem; // 40px
-$paragraph-font-size: 1rem; // 18px
-$small-font-size: .89rem; // 16px
-$default-line-height: 1.44rem; // 26px
-
-// $heading-1-font-size: 3.56rem; // 64px
-// $heading-2-font-size: 2.22rem; // 40px
-// $paragraph-font-size: 1rem; // 18px
-// $small-font-size: .89rem; // 16px
-// $default-line-height: 1.44rem; // 26px
-
-// Font
-$default-font-family:'Noto IKEA', 'Noto Sans', 'Roboto', 'Open Sans', system-ui, sans-serif ;
+$default-font-family: 'Noto Sans';
 $title-font-size:1.5rem;
 $small-text-size:0.875rem;
 
@@ -30,4 +7,3 @@ $small-text-size:0.875rem;
 $default-text-color:black;
 $small-text-color:#484848;
 $secondary-color:#F5F5F5;
-
