--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+
 @import "abstracts/variables";
 
 @import "base/base";
@@ -15,7 +17,3 @@
 @import "pages/login";
 @import "pages/favourite";
 @import "pages/shoppingBag";
-
-
-
-
