--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,47 @@
+body {
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
 
+.category {
+  border: none;
+  text-decoration: none;
+  color: black;
+}
+.category:hover {
+  text-decoration: underline;
+  color: black;
+}
+.category .category-body {
+  padding-left: 0px;
+}
+
+.breadcrumb-container {
+  margin-bottom: 3rem;
+}
+
+.breadcrumb-list {
+  padding: 1rem 0;
+}
+
+.bc-breadcrumb__link {
+  text-decoration: none;
+  font-size: 0.75rem;
+  line-height: 1.5;
+  font-weight: 400;
+  vertical-align: middle;
+}
+
+.head-title {
+  margin: 1.875rem 0.3rem;
+}
+
+.filter-btn {
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
 
 /*# sourceMappingURL=main.css.map */
