--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -10,11 +10,11 @@
 //   font-size: 112.5%;
 // }
 
-// body {
-//   box-sizing: border-box;
-//   overflow-x: hidden;
+body {
+  box-sizing: border-box;
+  overflow-x: hidden;
 //   background-color: $light-color;
-// }
+}
 
 // /* width */
 // ::-webkit-scrollbar {
