--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,7 +6,10 @@
 
 @import "components/button";
 @import "components/category-card";
+@import "components/breadcrumb";
 
 @import "layout/header";
 @import "layout/footer";
 @import "layout/title";
+
+@import "pages/products"
