--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -5,12 +5,12 @@
 .navbar {
 
   &>* {
-    margin-left: 2rem;
+    margin-left: 1.2rem;
   }
 
   .navbar-brand {
     flex-basis: 8.33%;
-    margin-left: 0;
+    margin: 0;
     display: flex;
     justify-content: center;
 
@@ -39,7 +39,7 @@
 
   .navbar-collapse {
     flex-grow: 0;
-    flex-basis: 25%;
+    flex-basis: 26%;
   }
 
   .navbar-search {
