--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,7 +7,7 @@
 @import "base/utilities";
 
 @import "components/button";
-@import "components/category-card";
+// @import "components/category-card";
 @import "components/breadcrumb";
 @import "components/card";
 @import "components/allMixin";
