--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Noto Sans";
-  src: url("../../fonts/NotoSans/NotoSans-Regular.ttf");
+  src: url("../fonts/NotoSans/NotoSans-Regular.ttf");
 }
 body {
   font-family: "Noto Sans", sans-serif;
