--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Noto Sans";
-  src: url("../../fonts/NotoSans/NotoSans-Regular.ttf");
+  src: url("../fonts/NotoSans/NotoSans-Regular.ttf");
 }
 
 body {
