--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,9 +1,11 @@
 // Font
 $default-font-family: 'Noto Sans';
 $title-font-size:1.5rem;
-$small-text-size:0.875rem;
+$title-font-weight:900;
+$small-text-size:0.75rem;
 
 // colors
 $default-text-color:black;
+$default-background-color:white;
 $small-text-color:#484848;
 $secondary-color:#F5F5F5;
