--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,7 +7,6 @@
 @import "base/utilities";
 
 @import "components/button";
-// @import "components/category-card";
 @import "components/breadcrumb";
 @import "components/card";
 @import "components/allMixin";
@@ -20,3 +19,4 @@
 @import "pages/login";
 @import "pages/favourite";
 @import "pages/shoppingBag";
+@import "pages/category";
