--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -2,7 +2,13 @@
     border: none;
     text-decoration: none;
     color: $default-text-color;
-
+    img{
+        border-radius: 0%;
+        -webkit-border-radius: 0%;
+        -moz-border-radius: 0%;
+        -ms-border-radius: 0%;
+        -o-border-radius: 0%;
+}
     &:hover {
         text-decoration: underline;
         color: $default-text-color;
@@ -14,21 +20,28 @@
 }
 
 .row-card-holder {
-    // height: 90vh;
-
-    .row-card {
-        font-family: $default-font-family;
+    //height: 90vh;
+    margin: 10% 0%;
+    .row-card{
+        text-decoration:none;
+        -moz-text-decoration:none;
+        margin-top: 2%;
         font-size: $title-font-size;
+        font-weight: $title-font-weight;
         display: flex;
         flex-direction: row;
-        // height: 100%;
-
+        &:hover{ 
+            text-decoration:underline;
+            -moz-text-decoration:underline;
+            text-decoration-color: $secondary-color; 
+            -moz-text-decoration-color: $secondary-color;
+        }
         .card-right {
             padding: 20px;
-            background-color: burlywood;
+            background-color: #204b7e;
             display: flex;
             flex-direction: column;
-
+            color: $secondary-color;
             .card-btn {
                 border-radius: 50%;
                 -webkit-border-radius: 50%;
