Add image gallery in SCSS files as a layout section

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,7 @@
 @import "components/allMixin";
 
 @import "layout/header";
+@import "layout/image-gallery";
 @import "layout/title";
 @import "layout/footer";
 
