Add navbar to the pages

--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -8,6 +8,22 @@
   font-size: 1.2rem;
 }
 
+.mt-nav {
+  margin-top: 60px;
+}
+
+.mt-nav-2 {
+  margin-top: 70px;
+}
+
+.pt-nav {
+  padding-top: 3.8rem;
+}
+
+.ml-auto {
+  margin-left: auto !important;
+}
+
 @media only screen and (max-width: 750px) {
   .body-container {
     width: 98vw;
