--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,22 @@ body {
   font-size: 1.2rem;
 }
 
+.mt-nav {
+  margin-top: 60px;
+}
+
+.mt-nav-2 {
+  margin-top: 70px;
+}
+
+.pt-nav {
+  padding-top: 3.8rem;
+}
+
+.ml-auto {
+  margin-left: auto !important;
+}
+
 @media only screen and (max-width: 750px) {
   .body-container {
     width: 98vw;
@@ -129,6 +145,11 @@ body {
   min-height: 40px;
 }
 
+.navbar {
+  width: 92vw;
+  left: auto;
+  right: 2.5rem;
+}
 .navbar > * {
   margin-left: 1.2rem;
 }
