--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -239,6 +239,7 @@ body {
   .navbar .navbar-search {
     order: 1;
     flex-basis: 100%;
+    margin: 0;
   }
   .navbar .navbar-icons {
     flex-basis: 20%;
