--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -24,6 +24,10 @@
   margin-left: auto !important;
 }
 
+.w-49 {
+  width: 49%;
+}
+
 @media only screen and (max-width: 815px) {
   .mt-nav {
     // margin-top: 10rem;
