--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @import "components/breadcrumb";
 @import "components/card";
 @import "components/allMixin";
+@import "components/sales-button";
 
 @import "layout/header";
 @import "layout/image-gallery";
