products-filter dropdown

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -6,4 +6,5 @@ $small-text-size:0.875rem;
 // colors
 $default-text-color:black;
 $small-text-color:#484848;
+$txt-color: rgb(117, 117, 117);
 $secondary-color:#F5F5F5;
