--- a/assets/scss/pages/_products.scss
+++ b/assets/scss/pages/_products.scss
@@ -1,7 +1,13 @@
-.filter-btn{
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
+.filter-row {
+    padding: 10px 0;
+    box-shadow: 5px 10px white;
+    background-color: white;
 }
+.filter-btn{
+    @include radius(20px);
+    i{
+        margin-left: 10px
+    }
+}
+
+.description{ @include HandleParagraph() ;}
