--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,476 @@
-/* Error: Can't find stylesheet to import.
- *    ,
- * 10 | @import "components/category-card";
- *    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
- *    '
- *   assets\scss\main.scss 10:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a    \2577 \a 10 \2502  @import \"components/category-card\";\d\a    \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   assets\\scss\\main.scss 10:9  root stylesheet";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
+
+@font-face {
+  font-family: "Noto Sans";
+  src: url("../../fonts/NotoSans/NotoSans-Regular.ttf");
+}
+body {
+  font-family: "Noto Sans", sans-serif;
+}
+
+.body-container {
+  width: 92vw;
+  margin-left: auto;
+  margin-right: 2.5rem;
+}
+
+.bi {
+  font-size: 1.2rem;
+}
+
+@media only screen and (max-width: 750px) {
+  .body-container {
+    width: 98vw;
+    margin: auto;
+  }
+}
+.breadcrumb-container {
+  margin-bottom: 3rem;
+}
+
+.breadcrumb-list {
+  padding: 1rem 0;
+}
+
+.bc-breadcrumb__link {
+  text-decoration: none;
+  font-size: 0.75rem;
+  line-height: 1.5;
+  font-weight: 400;
+  vertical-align: middle;
+  color: #484848;
+}
+
+.category-card {
+  border: none;
+  text-decoration: none;
+  color: black;
+}
+.category-card:hover {
+  text-decoration: underline;
+  color: black;
+}
+.category-card .category-body {
+  padding-left: 0px;
+}
+
+.row-card-holder .row-card {
+  font-family: "Noto Sans";
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: row;
+}
+.row-card-holder .row-card .card-right {
+  padding: 20px;
+  background-color: burlywood;
+  display: flex;
+  flex-direction: column;
+}
+.row-card-holder .row-card .card-right .card-btn {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border: none;
+  width: 60px;
+  height: 60px;
+  margin-top: auto;
+}
+
+.step-card {
+  color: #484848;
+  border: none;
+}
+.step-card .step-body {
+  text-align: center;
+  background-color: #F5F5F5;
+}
+.step-card .step-body svg {
+  fill: #484848;
+  width: 1.875rem;
+  height: 1.875rem;
+}
+.step-card .step-body .step-title {
+  color: black;
+}
+.step-card .step-body .step-link {
+  text-decoration-color: #484848;
+  -moz-text-decoration-color: #484848;
+  color: #484848;
+}
+
+.header-messages {
+  min-height: 40px;
+}
+
+.navbar > * {
+  margin-left: 2rem;
+}
+.navbar .navbar-brand {
+  flex-basis: 8.33%;
+  margin-left: 0;
+  display: flex;
+  justify-content: center;
+}
+.navbar .navbar-brand .logo {
+  padding: 1rem 0 1.75rem;
+}
+.navbar .toggler {
+  margin-left: 1rem;
+  border: none;
+  outline: none;
+}
+.navbar .navbar-nav .nav-item a {
+  color: black;
+  font-size: 0.875rem;
+  padding: 0 1rem;
+  font-weight: 700;
+}
+.navbar .navbar-collapse {
+  flex-grow: 0;
+  flex-basis: 25%;
+}
+.navbar .navbar-search {
+  padding: 1rem 3rem 1rem 2rem;
+  background-color: #f5f5f5;
+  border-radius: 5rem;
+  align-items: center;
+  flex-grow: 1;
+}
+.navbar .navbar-search .search-box {
+  display: flex;
+  justify-content: flex-start;
+}
+.navbar .navbar-search .search-box input {
+  padding-inline-start: 1rem;
+  outline: none;
+  border: none;
+  background-color: inherit;
+  width: 100%;
+}
+.navbar .navbar-icons {
+  flex-basis: 25%;
+  display: flex;
+  justify-content: space-between;
+}
+.navbar .navbar-icons .location-container {
+  display: flex;
+  align-items: flex-end;
+}
+.navbar .navbar-icons .location-container > * {
+  margin: 0 5px;
+}
+.navbar .navbar-icons .location-container .location-text {
+  display: flex;
+  flex-direction: column;
+}
+
+@media only screen and (max-width: 1200px) {
+  .navbar .navbar-icons {
+    flex-basis: 16.67%;
+  }
+  .navbar .navbar-icons .location-container {
+    display: none;
+  }
+}
+@media only screen and (max-width: 815px) {
+  .navbar .navbar-search {
+    order: 1;
+    flex-basis: 100%;
+  }
+  .navbar .navbar-icons {
+    flex-basis: 20%;
+    margin-left: auto;
+  }
+}
+.head-title {
+  margin: 1.875rem 0rem 1.875rem 0.3rem;
+  font-size: 1.5rem;
+}
+
+.small-text {
+  font-size: 0.875rem;
+  color: #484848;
+  margin: -1.875rem 0.3rem 1.875rem;
+  width: 70%;
+}
+
+.filter-row {
+  padding: 10px 0;
+  box-shadow: 5px 10px white;
+  background-color: white;
+}
+
+.filter-btn {
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+.filter-btn i {
+  margin-left: 10px;
+}
+
+.description {
+  color: #757575;
+  line-height: 1.6em;
+  margin-top: 30px;
+}
+
+.log-parent {
+  margin-top: 140px;
+}
+.log-parent .login-heading h3 {
+  font-weight: bold;
+}
+.log-parent .login-heading p {
+  color: #757575;
+  line-height: 1.6em;
+  margin-top: 30px;
+}
+.log-parent .login-heading button {
+  border-radius: 30px;
+  padding: 15px 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin-top: 70px;
+  background-color: transparent;
+}
+.log-parent .login-heading button:hover {
+  border-radius: 30px;
+  padding: 15px 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin-top: 70px;
+  background-color: #dad8d8;
+}
+.log-parent .login-form .sec-inp {
+  margin-bottom: 50px;
+}
+.log-parent .login-form a {
+  color: #757575;
+  font-size: 16px;
+}
+.log-parent .login-form .input-log input {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #000;
+}
+.log-parent .login-form button {
+  border-radius: 30px;
+  padding: 15px 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin-top: 70px;
+  background-color: #222222;
+  color: white;
+  width: 100%;
+}
+.log-parent .login-form button:hover {
+  opacity: 0.8;
+}
+
+.fav-parent {
+  margin-top: 80px;
+}
+.fav-parent .center-fav-page h3, .fav-parent .center-fav-page .fav-srow h6, .fav-parent .prod-box-info .prod-price h6 {
+  text-align: center;
+  font-weight: bold;
+}
+.fav-parent .center-fav-page .product-space {
+  margin-top: 50px;
+}
+.fav-parent .center-fav-page .fav-srow, .fav-parent .center-fav-page .prod-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.fav-parent .prod-box-info .prod-txt {
+  margin-top: 35px;
+}
+.fav-parent .prod-box-info .prod-txt h5 {
+  color: black;
+  font-weight: bold;
+}
+.fav-parent .prod-box-info .prod-txt span {
+  color: #757575;
+  line-height: 1.6em;
+  margin-top: 30px;
+}
+.fav-parent .prod-box-info .prod-img img {
+  width: 200px;
+  height: 200px;
+}
+.fav-parent .prod-box-info .prod-infoo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+.fav-parent .prod-box-info .prod-infoo .prod-box {
+  margin-left: 30px;
+}
+.fav-parent .prod-box-info .prod-infoo .prod-box .card-button {
+  background-color: #0f58a1;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 15px;
+  width: 100%;
+}
+.fav-parent .prod-box-info .prod-infoo .prod-box .card-button i {
+  padding-right: 10px;
+}
+.fav-parent .prod-box-info .prod-infoo .prod-box .card-button:hover {
+  opacity: 0.8;
+}
+.fav-parent .prod-box-info .prod-infoo .prod-box select, .fav-parent .prod-box-info .prod-infoo .prod-box .del-prod i {
+  padding: 6px 10px;
+  margin-top: 5px;
+  cursor: pointer;
+  outline: none;
+}
+.fav-parent .prod-box-info .prod-infoo .prod-box .del-prod {
+  background-color: transparent;
+  margin-top: 3px;
+}
+.fav-parent .prod-price h6 {
+  margin-top: 30px;
+}
+.fav-parent .total-price {
+  margin-top: 100px;
+}
+.fav-parent .total-price .show-price {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px dashed #757575;
+  border-bottom: 1px dashed #757575;
+  padding: 8px;
+}
+.fav-parent .total-price .prod-box {
+  text-align: center;
+  margin: 20px auto;
+}
+.fav-parent .total-price .prod-box button {
+  background-color: #0f58a1;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 15px;
+  width: 50%;
+  margin-top: 20px;
+}
+
+.fav-parent .shopping-header h3 {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.fav-parent .shopping-header h6 {
+  padding-top: 20px;
+}
+.fav-parent .shopping-header .shopping-total-price {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.fav-parent .shopping-header .shopping-total-price button {
+  background-color: #0f58a1;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 15px;
+}
+.fav-parent .shopping-page {
+  margin-top: 20px;
+}
+.fav-parent .shopping-page .shop-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  box-shadow: 4px 4px 4px 4px #e9e8e8;
+  width: 100%;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+.fav-parent .shopping-page .shop-section .shop-icon .prod-box {
+  margin-bottom: 10px;
+}
+.fav-parent .shopping-page .shop-section .shop-icon .prod-box select {
+  padding: 6px 10px;
+  margin-top: 5px;
+  cursor: pointer;
+  outline: none;
+}
+.fav-parent .shopping-page .shop-section .shop-icon .prod-box i {
+  opacity: 0.6;
+}
+.fav-parent .shopping-page .shop-section .shopping-img img {
+  width: 200px;
+  height: 200px;
+}
+.fav-parent .shopping-page .shop-section .shopping-info {
+  padding-left: 8px;
+  padding-top: 20px;
+}
+.fav-parent .shopping-page .shop-section .shopping-info h6 {
+  font-weight: bold;
+}
+.fav-parent .shopping-page .shop-section .shopping-info p {
+  color: #757575;
+}
+.fav-parent .shopping-page .last-sec {
+  margin-top: 80px;
+  height: 400px;
+  background-color: white;
+  box-shadow: 4px 4px 4px 4px #e9e8e8;
+  width: 100%;
+  padding: 20px;
+}
+.fav-parent .shopping-page .last-sec .shopping-total-price {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.fav-parent .shopping-page .last-sec .shopping-total-price button {
+  background-color: #0f58a1;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 15px;
+}
+.fav-parent .shopping-page .last-sec .pay-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+.fav-parent .shopping-page .last-sec .txttxt {
+  text-align: center;
+}
+
+/*# sourceMappingURL=main.css.map */
