--- a/assets/scss/components/_allMixin.scss
+++ b/assets/scss/components/_allMixin.scss
@@ -70,3 +70,11 @@
     width: 100%;
     padding: $fixed-number-margin ;
 }
+
+@mixin  radius($number) {
+    border-radius: $number;
+    -webkit-border-radius: $number;
+    -moz-border-radius: $number;
+    -ms-border-radius: $number;
+    -o-border-radius: $number;
+}
