--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -44,7 +44,7 @@
 
 @media only screen and (max-width: 750px) {
   .body-container {
-    width: 98vw;
+    // width: 98vw;
     margin: auto;
   }
 }
