--- a/assets/scss/components/_allMixin.scss
+++ b/assets/scss/components/_allMixin.scss
@@ -71,6 +71,7 @@
     padding: $fixed-number-margin ;
 }
 
+//style for buttons in category page
 @mixin SeeAllBtn {
     @include HandleButton;
     margin-top: 0;
@@ -85,4 +86,28 @@
 }
 @mixin SeeAllBtnHover {
     outline-color: $small-text-color;
+}
+
+@mixin slidder {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: flex;
+    flex-wrap: nowrap;
+    height: 300px;
+    padding-bottom: 10px;
+    
+     &::-webkit-scrollbar {
+         height: 3px;
+     }
+
+     &::-webkit-scrollbar-track {
+         background-color: $secondary-color;
+     }
+
+     &::-webkit-scrollbar-thumb {
+         background: $default-text-color;
+        //  &:hover {
+        //      height: 10px;
+        //  }
+     }
 }
