--- a/assets/scss/pages/_login.scss
+++ b/assets/scss/pages/_login.scss
@@ -1,4 +1,3 @@
-@import "../components/allMixin" ;
 // var 
 $txt-color: rgb(117, 117, 117);
 
@@ -7,40 +6,50 @@ $txt-color: rgb(117, 117, 117);
     margin-top: 140px;
 
     .login-heading {
-        
-        h3{ font-weight: bold ; }
 
-        p { @include HandleParagraph() }
+        h3 {
+            font-weight: bold;
+        }
+
+        p {
+            @include HandleParagraph()
+        }
 
         button {
-            @include HandleButton() ;
-            background-color: transparent ;   
+            @include HandleButton();
+            background-color: transparent;
         }
 
         button:hover {
-            @include HoverButton() ;
-            
+            @include HoverButton();
+
         }
     }
 
-// Right Section
+    // Right Section
     .login-form {
-        .sec-inp { margin-bottom: 50px; }
-
-        a{
-            color: $txt-color ;
-            font-size: 16px ;
+        .sec-inp {
+            margin-bottom: 50px;
         }
 
-        .input-log input { @include HandleInput() ;}
+        a {
+            color: $txt-color;
+            font-size: 16px;
+        }
+
+        .input-log input {
+            @include HandleInput();
+        }
 
         button {
-            @include HandleButton() ;
-            background-color: rgb(34, 34, 34) ;
-            color: white ;
-            width: 100% ;
+            @include HandleButton();
+            background-color: rgb(34, 34, 34);
+            color: white;
+            width: 100%;
         }
 
-        button:hover {@include ShoppingButtonHover()}
+        button:hover {
+            @include ShoppingButtonHover()
+        }
     }
 }
