--- a/assets/scss/pages/_shoppingBag.scss
+++ b/assets/scss/pages/_shoppingBag.scss
@@ -1,74 +1,92 @@
-@import "../components/allMixin" ;
 // var 
 $txt-color: rgb(117, 117, 117);
-$text-position : center ;
-$fixed-number-margin : 20px ;
+$text-position : center;
+$fixed-number-margin : 20px;
 
 // Center Section
 .fav-parent {
     .shopping-header {
         h3 {
-            font-weight: bold ;
-            margin-bottom: $fixed-number-margin ;
+            font-weight: bold;
+            margin-bottom: $fixed-number-margin;
         }
-        h6 {padding-top: $fixed-number-margin}
+
+        h6 {
+            padding-top: $fixed-number-margin
+        }
 
         .shopping-total-price {
             @include HandleFlexItems();
+
             button {
-                @include ShoppingButton() ;
+                @include ShoppingButton();
             }
         }
     }
 
     .shopping-page {
-        margin-top: $fixed-number-margin ;
+        margin-top: $fixed-number-margin;
 
         .shop-section {
-            @include HandleFlexItems() ;
-            @include HandleBoxForEachProduct() ;
-            margin-bottom: $fixed-number-margin ;
+            @include HandleFlexItems();
+            @include HandleBoxForEachProduct();
+            margin-bottom: $fixed-number-margin;
 
             .shop-icon .prod-box {
                 margin-bottom: 10px;
-                
-                select {@include HandleSelect()}
-                i {opacity: 0.6;}
+
+                select {
+                    @include HandleSelect()
+                }
+
+                i {
+                    opacity: 0.6;
+                }
             }
 
-            .shopping-img img {@include HandleProductImage()}
+            .shopping-img img {
+                @include HandleProductImage()
+            }
 
             .shopping-info {
-                padding-left: 8px ;
+                padding-left: 8px;
                 padding-top: $fixed-number-margin;
-                h6 { font-weight: bold ;}
-                p { color: $txt-color;  }
+
+                h6 {
+                    font-weight: bold;
+                }
+
+                p {
+                    color: $txt-color;
+                }
             }
         }
 
-        .last-sec{
-            margin-top: 80px ;
-            height: 400px ;
-            @include HandleBoxForEachProduct ;
+        .last-sec {
+            margin-top: 80px;
+            height: 400px;
+            @include HandleBoxForEachProduct;
 
             .shopping-total-price {
                 @include HandleFlexItems();
                 margin-bottom: $fixed-number-margin;
-                    button {
-                        @include ShoppingButton() ;
-                    }
+
+                button {
+                    @include ShoppingButton();
+                }
             }
+
             .pay-box {
                 @include HandleFlexItems();
                 justify-content: space-around;
                 margin-bottom: $fixed-number-margin;
             }
 
-            .txttxt {text-align: $text-position;}
+            .txttxt {
+                text-align: $text-position;
+            }
         }
-    
-    }
 
     }
 
-
+}
