--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -49,6 +49,7 @@
             width: 60px;
             height: 60px;
             margin-top: auto;
+            background-color: $default-background-color;
         }
     }
 }
