--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,11 +99,11 @@ body {
   font-size: 0.9rem;
 }
 .category-card img {
-  border-radius: 0%;
-  -webkit-border-radius: 0%;
-  -moz-border-radius: 0%;
-  -ms-border-radius: 0%;
-  -o-border-radius: 0%;
+  border-radius: 0px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
 }
 .category-card:hover {
   text-decoration: underline;
@@ -135,16 +135,19 @@ body {
   color: #F5F5F5;
 }
 .row-card .card-right .card-btn {
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
   border: none;
   width: 60px;
   height: 60px;
   margin-top: auto;
   background-color: white;
+}
+.row-card .card-right .card-btn:hover {
+  background-color: #F5F5F5;
 }
 
 .step-card {
@@ -652,11 +655,11 @@ body {
 .images-cards-container .image-card {
   position: relative;
   display: inline-flex;
+  width: 40%;
+  margin-right: 2%;
 }
 .images-cards-container .image-card img {
-  margin: 0 auto;
-  max-height: 100%;
-  max-width: 100%;
+  min-width: 100%;
 }
 .images-cards-container .image-card .button-holder {
   width: 100%;
@@ -692,10 +695,10 @@ body {
 .image-container .on-image-btn {
   position: absolute;
   border-radius: 50%;
-  -webkit-border-radius: 64px;
-  -moz-border-radius: 64px;
-  -ms-border-radius: 64px;
-  -o-border-radius: 64px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
   background: white;
   box-shadow: 0px 0px 0px 10px #0000002e;
   width: 0.75rem;
