--- a/assets/scss/pages/_category.scss
+++ b/assets/scss/pages/_category.scss
@@ -11,10 +11,10 @@
     .image-card {
         position: relative;
         display: inline-flex;
-        img {
-            margin: 0 auto;
-            max-height: 100%;
-            max-width: 100%;
+        width: 40%;
+        margin-right: 2%;
+        img{
+            min-width: 100%;
         }
         .button-holder {
             width: 100%;
@@ -36,11 +36,7 @@
     position: relative;
     .on-image-btn{
     position: absolute;
-    border-radius: 50%;
-    -webkit-border-radius: 64px;
-    -moz-border-radius: 64px;
-    -ms-border-radius: 64px;
-    -o-border-radius: 64px;
+    @include radius(50%);
     background: white;
     box-shadow: 0px 0px 0px 10px #0000002e;
     width: 0.75rem;
