--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -201,6 +201,56 @@ body {
   -o-border-radius: 4rem;
 }
 
+.image-container {
+  position: relative;
+}
+.image-container .on-image-btn {
+  position: absolute;
+  border-radius: 50%;
+  -webkit-border-radius: 64px;
+  -moz-border-radius: 64px;
+  -ms-border-radius: 64px;
+  -o-border-radius: 64px;
+  background: white;
+  box-shadow: 0px 0px 0px 10px #0000002e;
+  width: 0.75rem;
+  height: 0.75rem;
+  opacity: 0;
+  transition: opacity 300ms;
+}
+.image-container .on-image-btn:hover {
+  box-shadow: 0px 0px 0px 8px #00000067;
+  width: 0.6rem;
+  height: 0.6rem;
+}
+.image-container:hover .on-image-btn {
+  opacity: 1;
+}
+.image-container .image1-position {
+  top: 15%;
+  right: 30%;
+}
+.image-container .image2-position {
+  top: 50%;
+  right: 75%;
+}
+.image-container .image3-position {
+  top: 70%;
+  right: 60%;
+}
+.image-container .image4-position {
+  top: 80%;
+  right: 25%;
+}
+.image-container .image5-position {
+  top: 60%;
+  right: 25%;
+}
+.image-container .image6-position {
+  top: 35%;
+  right: 18%;
+}
+
 .header-messages {
   min-height: 40px;
 }
@@ -310,10 +360,18 @@ body {
   justify-content: space-between;
 }
 .image-gallery .image-column .short-img {
-  height: 41%;
+  height: 41.8%;
+}
+.image-gallery .image-column .short-img img {
+  height: 100%;
+  object-fit: cover;
 }
 .image-gallery .image-column .long-img {
   height: 55%;
+}
+.image-gallery .image-column .long-img img {
+  height: 100%;
+  object-fit: cover;
 }
 .image-gallery .image-column img {
   max-width: 100%;
