--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -10,3 +10,5 @@ $default-background-color:white;
 $small-text-color:#484848;
 $txt-color: rgb(117, 117, 117);
 $secondary-color:#F5F5F5;
+$border-color:#DFDFDF;
+$orange:#CA5008;
