--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -323,6 +323,39 @@ body {
   margin-top: 30px;
 }
 
+.prod-container {
+  padding: 1rem 0.875rem;
+  border-top: 1px solid #DFDFDF;
+}
+
+@media only screen and (max-width: 576px) {
+  .prod-container {
+    padding: 1rem 0.875rem;
+    border: 1px solid #DFDFDF;
+  }
+}
+.new {
+  color: #CA5008;
+}
+
+.variant-container {
+  width: 2.5rem;
+  height: 2.5rem;
+  padding: 0;
+  margin-left: 0.25rem;
+  cursor: pointer;
+  margin-bottom: 0.25rem;
+}
+.variant-container:hover {
+  border: 1px solid #484848;
+}
+
+.variant-img {
+  width: 2.375rem;
+  max-width: 2.375rem;
+  max-height: 2.375rem;
+}
+
 .log-parent {
   margin-top: 140px;
 }
