--- a/assets/scss/pages/_products.scss
+++ b/assets/scss/pages/_products.scss
@@ -19,3 +19,36 @@
 }
 
 .description{ @include HandleParagraph() ;}
+
+.prod-container{
+    padding: 1rem 0.875rem;
+    border-top:1px solid $border-color ;  
+}
+
+@media only screen and (max-width: 576px) {
+    .prod-container{
+        padding: 1rem 0.875rem;
+        border:1px solid $border-color ;  
+    }
+  }
+.new{
+    color: $orange;
+}
+.variant-container{
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: 0;
+    margin-left: 0.25rem;
+    cursor: pointer;
+    margin-bottom: 0.25rem;
+    &:hover{
+        border: 1px solid $small-text-color;
+    }
+}
+.variant-img{
+    width: 2.375rem;
+    max-width: 2.375rem;
+    max-height: 2.375rem;
+}
+
+
