--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -1,8 +1,8 @@
 .body-container {
   width: 92vw;
   margin-left: auto;
-  margin-right: 2.5rem;
-  padding-left: 4rem;
+  margin-right: $body-margin-right;
+  padding-left: $body-padding-left;
 }
 
 .bi {
@@ -34,6 +34,7 @@
     margin-right: 1rem;
     padding-left: 0;
   }
+
   .mt-nav {
     // margin-top: 10rem;
   }
