--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -5,7 +5,8 @@
 .navbar {
   width: 92vw;
   left: auto;
-  right: 2.5rem;
+  right: $body-margin-right;
+  padding-left: $body-padding-left;
 
   &>* {
     margin-left: 1.2rem;
