--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -2,7 +2,8 @@
 $default-font-family: 'Noto Sans';
 $title-font-size:1.5rem;
 $title-font-weight:900;
-$small-text-size:0.9rem;
+$bold-font-weight:'bolder';
+$small-text-size:0.8rem;
 
 // colors
 $default-text-color:black;
