--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,7 +96,7 @@ body {
   border: none;
   text-decoration: none;
   color: #484848;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 .category-card img {
   border-radius: 0px;
@@ -153,7 +153,7 @@ body {
 .step-card {
   border: none;
   color: #484848;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 .step-card .step-body {
   text-align: center;
@@ -166,7 +166,7 @@ body {
 }
 .step-card .step-body .step-title {
   color: black;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-weight: 900;
 }
 .step-card .step-body .step-link {
@@ -192,7 +192,7 @@ body {
   height: 2.5rem;
   padding: 0 1.5rem;
   border: 1px solid #dfdfdf;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-weight: 800;
   border-radius: 4rem;
   -webkit-border-radius: 4rem;
@@ -384,9 +384,13 @@ body {
 }
 
 .small-text {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   color: #484848;
-  width: 70%;
+}
+
+.big-title {
+  font-size: 2.25rem;
+  font-weight: 900;
 }
 
 .filter-row {
@@ -719,7 +723,7 @@ body {
   outline-width: 1px;
   outline-color: #F5F5F5;
   background-color: white;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-weight: 900;
 }
 .see-all-btn:hover {
@@ -773,7 +777,7 @@ body {
   outline-width: 1px;
   outline-color: #F5F5F5;
   background-color: white;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-weight: 900;
 }
 .images-cards-container .image-card .button-holder button:hover {
