--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -3,13 +3,14 @@ $default-font-family: 'Noto Sans';
 $title-font-size:1.5rem;
 $title-font-weight:900;
 $bold-font-weight:'bolder';
+$medium-text-size:0.875rem;
 $small-text-size:0.8rem;
 
 // colors
-$default-text-color:black;
+$default-text-color:#111;
 $default-background-color:white;
 $small-text-color:#484848;
-$txt-color: rgb(117, 117, 117);
+$txt-color: #757575;
 $secondary-color:#F5F5F5;
 $border-color:#DFDFDF;
 $orange:#CA5008;
