--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -9,10 +9,18 @@
 a {
   color: $default-text-color;
   text-decoration: none;
+
+  &:hover {
+    color: $default-text-color;
+  }
 }
 
 button {
   border: none;
   outline: none;
   background-color: transparent;
+}
+
+li {
+  list-style: none;
 }
