--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -17,8 +17,12 @@
   margin-top: 4.5rem;
 }
 
+.mt-nav-3 {
+  margin-top: 6rem;
+}
+
 .pt-nav {
-  padding-top: 3.8rem;
+  padding-top: 2rem;
 }
 
 .ml-auto {
