--- a/assets/scss/pages/_products.scss
+++ b/assets/scss/pages/_products.scss
@@ -1,7 +1,7 @@
 .filter-row {
     padding: 10px 0;
-    box-shadow: 5px 10px white;
     background-color: white;
+    border-bottom:1px solid $border-color ;
 }
 .filter-btn{
     @include radius(20px);
@@ -20,9 +20,19 @@
 
 .description{ @include HandleParagraph() ;}
 
+.section-title{
+    margin: 1.875rem 0
+}
+
 .prod-container{
     padding: 1rem 0.875rem;
-    border-top:1px solid $border-color ;  
+    border-bottom:1px solid $border-color ;  
+    header{
+        opacity: 0;
+    }
+    &:hover header {
+        opacity: 1;
+      }
 }
 
 @media only screen and (max-width: 576px) {
