--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,6 +13,7 @@
 @import "components/sales-button";
 @import "components/teaser-container";
 @import "components/image-container";
+@import "components/menu";
 
 @import "layout/header";
 @import "layout/image-gallery";
