--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -1,18 +1,29 @@
-.category-card {
-    border: none;
-    text-decoration: none;
-    color: $small-text-color;
-    font-size: $small-text-size;
-    img{
-        @include radius(0px);
+.categories-slidder{
+    @include slidder;
+    @media only screen and (max-width: 890px){
+        height: fit-content;
     }
-    &:hover {
-        text-decoration: underline;
-        color: $default-text-color;
+    @media screen and (min-width:900px){
+        flex-wrap: wrap;
+        overflow-x: hidden;
+        height: fit-content;
     }
-
-    .category-body {
-        padding-left: 0px;
+    .category-card {
+        border: none;
+        text-decoration: none;
+        color: $small-text-color;
+        font-size: $small-text-size;
+        img{
+            @include radius(0px);
+        }
+        &:hover {
+            text-decoration: underline;
+            color: $default-text-color;
+        }
+    
+        .category-body {
+            padding-left: 0px;
+        }
     }
 }
 
