--- a/assets/scss/pages/_products.scss
+++ b/assets/scss/pages/_products.scss
@@ -61,4 +61,23 @@
     max-height: 2.375rem;
 }
 
+.offcanvas-footer{
+    padding: 1rem 1rem;
+    border-top: 1px solid #dee2e6;
 
+    .clear-btn{
+        border:1px solid #dee2e6 ;
+        &:hover{
+            border:1px solid $default-text-color ;
+        }
+    }
+
+    .view-btn{
+        background-color: $default-text-color ;
+        color: $default-background-color;
+        &:hover{
+            background-color: lighten($default-text-color,10) ;
+        }
+    }
+    
+}
